--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -17,6 +17,10 @@ img {
   -webkit-transition: border 1s;
   transition: border 1s; }
 
+.nodeco {
+  font-size: 50px;
+  color: green; }
+
 img:hover {
   border: 25px solid #555; }
 
