--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -13,7 +13,7 @@ body {
   text-align: center; }
 
 img {
-  border: 25px solid #333;
+  border: 20px solid rgba(33, 243, 145, 0.21);
   -webkit-transition: border 1s;
   transition: border 1s; }
 
@@ -22,7 +22,7 @@ img {
   color: green; }
 
 img:hover {
-  border: 25px solid #555; }
+  border: 20px solid #555; }
 
 .cat li {
   display: inline-block;
@@ -113,10 +113,15 @@ li {
   border: 1px solid red;
   left: 0px;
   top: 0;
-  font-size: 35px;
+  font-size: 22px;
   background-color: rgba(33, 243, 145, 0.21);
   width: 90%;
   margin: auto;
   padding: auto;
   padding-top: 10px;
   border-radius: 10px; }
+
+.list-group-item {
+  background-color: rgba(33, 243, 145, 0.5) !important;
+  color: black !important;
+  border: 1px solid black !important; }
