--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -1,159 +1,211 @@
-@import url("//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
 body {
   background-color: black;
-  background-image: url("/images/sunflowr.png"), url("/images/p.png");
+  background-image: url("../images/sunflowr.png"), url("../images/p.png");
   background-position: top, bottom;
   background-repeat: no-repeat, repeat;
   background-size: cover, auto;
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed , auto;
-  color: lime;
-  font-size: 20px;
-  font-weight: bold;
-  text-shadow: 2px 2px red;
-  font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir", "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans", "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu", "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
-  text-align: center; }
 
-img {
-  border: 20px solid rgba(33, 243, 145, 0.21);
-  -webkit-transition: border 1s;
-  transition: border 1s; }
 
-.nodeco {
-  font-size: 30px;
-  color: green; }
+/* Create the parallax scrolling effect */
+background-attachment: fixed ,fixed;
 
-img:hover {
-  border: 20px solid #555; }
-
-.cat li {
-  display: inline-block;
-  padding: 5px; }
-
-.products {
+color:lime;
+font-size: 20px;
+font-weight: bold;
+text-shadow: 2px 2px red;
+  font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
+    "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
+    "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
+    "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
   text-align: center;
-  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.62);
-  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.62);
-  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.62);
-  -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
-  clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%); }
+}
+img{
+ border: 20px  solid rgba(33,243, 145, 0.21);
+ transition: border 1s;
 
+}
+.nodeco{
+  font-size:30px;
+  color: green;
+}
+img:hover{
+  border: 20px solid #555;
+
+}
+.cat li{
+  display: inline-block;
+  padding: 5px;
+}
+.products{
+  text-align: center;
+ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.62);
+ -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.62);
+ -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.62);
+ -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+}
 a {
-  color: rgba(0, 0, 0, 0.7); }
-  a:focus, a:hover {
-    color: rgba(0, 0, 0, 0.6); }
+  color: rgba(#000, 0.7);
+
+  &:focus,
+  &:hover {
+    color: rgba(#000, 0.6);
+  }
+}
 
 .middleman-logo {
   margin-bottom: 1rem;
-  width: 10rem; }
+  width: 10rem;
+}
 
-.footer-social-links {
-  font-size: 14px;
+@import url("//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
+
+//body { background-color: #eee; }
+
+.footer-social-links{
+    font-size: 14px;
   text-align: center;
-  margin-top: 5%; }
+  margin-top: 5%;
+}
+.footer-social-links a{
+    width: 25px;
+    height: 25px;
+    line-height: 25px !important;
+    position: relative;
+    margin: 0 5px;
+    text-align: center;
+    display: inline-block;
+    color: #333;
 
-.footer-social-links a {
-  width: 25px;
-  height: 25px;
-  line-height: 25px !important;
-  position: relative;
-  margin: 0 5px;
-  text-align: center;
-  display: inline-block;
-  color: #333;
-  -webkit-transition: all 0.27s cubic-bezier(0.3, 0.1, 0.58, 1);
-  transition: all 0.27s cubic-bezier(0.3, 0.1, 0.58, 1); }
-
+    -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+    -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+    -o-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+    -ms-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+    transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+}
 .footer-social-links a i,
-.footer-social-links a span {
-  position: relative;
-  top: 2px;
-  left: 1px; }
+.footer-social-links a span{
+    position: relative;
+    top: 2px;
+    left: 1px;
+}
+.footer-social-links a:before{
+    content: "";
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 1px solid #111;
 
-.footer-social-links a:before {
-  content: "";
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border: 1px solid #111;
-  border-radius: 2px;
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  -webkit-transition: all 0.27s cubic-bezier(0.3, 0.1, 0.58, 1);
-  transition: all 0.27s cubic-bezier(0.3, 0.1, 0.58, 1); }
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
 
-.footer-social-links a:hover {
-  color: #555; }
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
 
-.footer-social-links a:hover:before {
-  background: #111; }
+    -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+    -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+    -o-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+    -ms-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
+    transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
 
-ul {
-  list-style-type: none; }
+}
+.footer-social-links a:hover{
+    color: #555;
+}
+.footer-social-links a:hover:before{
+    background: #111;
+}
+ul li{
+  list-style-type: none;
+}
 
 li {
-  text-decoration: none; }
-
-.displaynone {
-  display: none; }
-
+  text-decoration: none;
+}
+.displaynone{
+  display: none;
+}
 .button {
-  background-color: #4CAF50;
-  /* Green */
+  background-color: #4CAF50; /* Green */
   border: none;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px; }
+  font-size: 16px;
+}
+.Announcement{
+border: 1px solid red;
+left: 0px;
+top: 0;
+font-size: 22px;
+background-color: rgba(33,243, 145, 0.21);
+width: 90%;
+margin: auto;
+padding: auto;
+padding-top: 10px;
+border-radius: 10px;
 
-.Announcement {
-  border: 1px solid red;
-  left: 0px;
-  top: 0;
-  font-size: 22px;
-  background-color: rgba(33, 243, 145, 0.21);
-  width: 90%;
+
+}
+.list-group-item{
+  background-color: rgba(33,243, 145, 0.5)!important;
+  color: black!important;
+   border: 1px solid black!important;
+}
+button img{
+  display:block;
   margin: auto;
   padding: auto;
-  padding-top: 10px;
-  border-radius: 10px; }
-
-.list-group-item {
-  background-color: rgba(33, 243, 145, 0.5) !important;
-  color: black !important;
-  border: 1px solid black !important; }
-
-button img {
-  display: block;
-  margin: auto;
-  padding: auto;
-  border: none; }
-
-button img:hover {
   border: none;
-  opacity: .9; }
 
-.sc-cart-summary-subtotal, .sc-cart-item {
-  margin-right: 15px; }
+}
+button img:hover{
+  border: none;
+  opacity: .9;
 
-.sc-cart-toolbar {
-  display: block;
+}
+
+.sc-cart-summary-subtotal , .sc-cart-item{
   margin-right: 15px;
-  float: right; }
 
-.sc-cart-toolbar > button {
-  display: block;
-  margin: 5px; }
+}
+.sc-cart-toolbar{
+display: block;
+margin-right: 15px;
+float: right;
 
+}
+.sc-cart-toolbar > button{
+  display:block;
+  margin: 5px;
+}
 .clearfix::after {
   content: "";
   clear: both;
-  display: table; }
+  display: table;
+}
+.btn-danger{
+ float: right;
+}
+.cartitems > li{
 
-.btn-danger {
-  float: right; }
+  display: inline-block;
+
+}
+.sc-product-item{
+
+}
+.sc-product-item img{
+  display: inline-block!important;
+   width:250px;
+   height:300px;
+}
